# MochiEngine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  Proyectos.lnk  QUICK_START.md  README.md  TODO.md  TODO.txt
Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Audio/: FMODWrapper.cpp  FMODWrapper.h
Engine/CoreData/: Actions.json
Engine/CoreData/Script/: Coroutines.lua  Math.lua
Engine/Docs/: Engine.md  Readme.md  _abstract_g_u_i_8h_source.html  _abstract_texture_factory_8h_source.html  _animated_sprite_8h_source.html  _camera_8h_source.html  _chrono_8h_source.html  _debug_layer_8h_source.html  _dummy_rendering_8h_source.html  _exception_8hpp_source.html  _f_m_o_d_wrapper_8h_source.html  _i_action_manager_8h_source.html  _i_performable_action_8h_source.html  _layer_8h_source.html  _math_utils_8h_source.html  _pack_catalog_8h_source.html  _performable_actions_8h_source.html  _profiler_8hpp_source.html  _s_d_l_g_u_i_8h_source.html  _s_d_l_gamepad_provider_8h_source.html  _s_d_l_texture_factory_8h_source.html  _shapes_8h_source.html  class_mochi_1_1_audio_1_1_dummy_audio_manager-members.html  class_mochi_1_1_audio_1_1_f_m_o_d_wrapper-members.html  class_mochi_1_1_audio_1_1_i_audio_manager-members.html  class_mochi_1_1_debug_1_1_i_gizmos.html  class_mochi_1_1_debug_layer.html  class_mochi_1_1_debug_layer.js  class_mochi_1_1_engine.html  class_mochi_1_1_event_1_1_s_d_l_system_event_dispatcher.html  class_mochi_1_1_f_s_1_1_i_file_loader-members.html  class_mochi_1_1_f_s_1_1_i_file_loader.html  class_mochi_1_1_f_s_1_1_pack_catalog-members.html  class_mochi_1_1_f_s_1_1_pack_file.html  class_mochi_1_1_graphics_1_1_abstract_g_u_i-members.html  class_mochi_1_1_graphics_1_1_abstract_texture_factory.html  class_mochi_1_1_graphics_1_1_aseprite_animation_factory-members.html  class_mochi_1_1_graphics_1_1_dummy_animation_factory.html  class_mochi_1_1_graphics_1_1_dummy_g_u_i-members.html  class_mochi_1_1_graphics_1_1_dummy_gizmos-members.html  (+51 more)
Engine/Docs/.obsidian/: workspace.json
Engine/Docs/search/: all_1.js  all_10.js  all_2.js  all_5.js  all_8.js  all_9.js  all_d.js  classes_1.js  classes_9.js  functions_0.js  functions_5.js  functions_d.js  searchdata.js
Engine/Entity/: IAnimatable.h  IEntity.h  IRenderable.h  IUpdateable.h
Engine/Event/: EventBus.h
Engine/GUI/: GUI.cpp  GUI.h
Engine/Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  AnimationData.h  AnimationFactory.cpp  AnimationFactory.h  Camera.cpp  Camera.h  RenderCommand.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  TextureFactory.cpp  TextureFactory.h
Engine/Includes/: CMakeLists.txt
Engine/Includes/SDL3_image/: CMakeLists.txt
Engine/Includes/lua/: CMakeLists.txt
Engine/Input/: ActionManager.cpp  ActionManager.h  InputManager.cpp  InputManager.h
Engine/Packer/: CMakeLists.txt  IFileLoader.h  PackCatalog.cpp  PackCatalog.h  PackFile.cpp  PackFile.h  SystemFileLoader.cpp  SystemFileLoader.h  packer.cpp
Engine/TestData/: Data.pak
Engine/TestData/Script/: TestScript.lua
Engine/Tests/: CMakeLists.txt  CameraTests.cpp  EventBusTests.cpp  FMODTests.cpp  FullEngineTests.cpp  InputTests.cpp  LuaTest.cpp  PackerTests.cpp  PhysicsTests.cpp  TextRenderTests.cpp  TimeTests.cpp  TypesTests.cpp
Engine/Time/: Chrono.cpp  Chrono.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h
Engine/Types/: Types.hpp
Engine/Utils/: StringUtils.h
Engine/src/: Constants.h  Engine.cpp  Engine.h  Exception.hpp  Layer.cpp  Layer.h  ScriptingManager.cpp  ScriptingManager.h
Engine/src/Audio/: DummyAudioManager.h  FMODWrapper.cpp  FMODWrapper.h  IAudioManager.h  SDLAudio.cpp  SDLAudio.h
Engine/src/Debug/: DebugLayer.cpp  DebugLayer.h  Gizmos.hpp  IGizmos.cpp  IGizmos.h  Profiler.hpp  SDLGizmos.cpp  SDLGizmos.h
Engine/src/ECS/: ECSWorld.cpp  ECSWorld.h  IECSSystem.h
Engine/src/Entity/: IAnimatable.h  IEntity.h  IRenderable.h  IUpdateable.h
Engine/src/Event/: DummyEventDispatcher.h  EngineEvents.h  EventBus.h  ISystemEventDispatcher.h  SDLSystemEventDispatcher.cpp  SDLSystemEventDispatcher.h
Engine/src/GUI/: AbstractGUI.cpp  AbstractGUI.h  GUI.cpp  GUI.h  GUICommon.hpp  GUIUtils.hpp  SDLGUI.cpp  SDLGUI.h
Engine/src/Graphics/: AbstractTextureFactory.cpp  AbstractTextureFactory.h  AnimatedSprite.cpp  AnimatedSprite.h  AnimationData.h  AnimationFactory.cpp  AnimationFactory.h  AsepriteAnimationFactory.cpp  AsepriteAnimationFactory.h  Camera.cpp  Camera.h  DummyAnimationFactory.h  DummyRendering.h  IAnimationFactory.h  IRenderer.h  ITexture.h  OneshotAnimation.cpp  OneshotAnimation.h  RenderCommand.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteBase.cpp  SpriteBase.h  Spritesheet.cpp  Spritesheet.h  TextureFactory.cpp  TextureFactory.h
Engine/src/Input/: ActionManager.cpp  ActionManager.h  DummyInputProviders.h  IActionManager.h  IGamepadProvider.h  IKeyboardProvider.h  IMouseProvider.h  IPerformableAction.h  InputCommons.h  InputManager.cpp  InputManager.h  PerformableActions.cpp  PerformableActions.h  SDLGamepadProvider.cpp  SDLGamepadProvider.h  SDLKeyboardProvider.cpp  SDLKeyboardProvider.h  SDLMouseProvider.cpp  SDLMouseProvider.h  VirtualActionManager.cpp  VirtualActionManager.h
Engine/src/Packer/: IFileLoader.h  PackCatalog.cpp  PackCatalog.h  PackFile.cpp  PackFile.h  SystemFileLoader.cpp  SystemFileLoader.h  packer.cpp
Engine/src/Physics/: Collisions.h  Shapes.cpp  Shapes.h
Engine/src/Scripting/: LuaBindings.cpp  LuaBindings.h  ScriptingLayer.cpp  ScriptingLayer.h  ScriptingManager.cpp  ScriptingManager.h
Engine/src/Time/: Chrono.cpp  Chrono.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h
Engine/src/Types/: Transform.hpp  Types.hpp
Includes/FMOD/: CMakeLists.txt
Samples/Platformer/: CMakeLists.txt
Samples/SpaceShooter/: CMakeLists.txt  README.md
Tests/: CMakeLists.txt  GameTests.cpp  PlayerTests.cpp
Tests/scripts/: doctest.cmake
src/Engine/: CMakeLists.txt  Constants.h  Logger.h  World.cpp  World.h  main.cpp
src/Packer/: CMakeLists.txt  packer.cpp
src/Test/: CMakeLists.txt  FMODTests.cpp  InputTests.cpp  LuaTest.cpp  MainTests.cpp  TextRenderTests.cpp
(+1525 files in other folders)
